force-app/main/default/objects/Case/fields/Printer__c.field-meta.xml
<CustomField>
    <fullName>Printer__c</fullName>
    <description>Printer company for existing marketing orders</description>
    <inlineHelpText>Printer company for existing marketing orders</inlineHelpText>
    <label>Printer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sears Headquarters</fullName>
            </value>
            <value>
                <fullName>Blooming Color</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>