force-app/main/default/objects/Case/fields/Product_Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Availability_Type__c</fullName>
    <description>Select the availability of the new product that is being requested</description>
    <inlineHelpText>Select the availability of the new product that is being requested</inlineHelpText>
    <label>Product Availability Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currently available from Sears (Sears Item #)</fullName>
            </value>
            <value>
                <fullName>Currently available from Kmart (Kmart Item #)</fullName>
            </value>
            <value>
                <fullName>Currently available from TGI (TGI Item #)</fullName>
            </value>
            <value>
                <fullName>Sears Marketplace Item (displayed on sears.com, offered from a different company)</fullName>
            </value>
            <value>
                <fullName>Other vendor/manufacturer/retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>