force-app/main/default/objects/Case/fields/Product_available_on_Sears_com__c.field-meta.xml
<CustomField>
    <fullName>Product_available_on_Sears_com__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product available on Sears.com?</description>
    <inlineHelpText>Product available on Sears.com?</inlineHelpText>
    <label>Product available on Sears.com?</label>
    <type>Checkbox</type>
</CustomField>