force-app/main/default/objects/Case/fields/Program_Ad__c.field-meta.xml
<CustomField>
    <fullName>Program_Ad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Program Ad</label>
    <type>Checkbox</type>
</CustomField>