force-app/main/default/objects/Case/fields/Raffle__c.field-meta.xml
<CustomField>
    <fullName>Raffle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raffle</label>
    <type>Checkbox</type>
</CustomField>