force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account is on incorrect tier</fullName>
            </value>
            <value>
                <fullName>Cannot place order</fullName>
            </value>
            <value>
                <fullName>Commercial list price is high/Low</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Error Placing Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Not in SAP</fullName>
            </value>
            <value>
                <fullName>Create new KAP</fullName>
            </value>
            <value>
                <fullName>Add/Remove account to existing KAP</fullName>
            </value>
            <value>
                <fullName>Add/Remove items to existing KAP</fullName>
            </value>
            <value>
                <fullName>Missing Commercial List Price</fullName>
            </value>
            <value>
                <fullName>Pricing error in SAP</fullName>
            </value>
            <value>
                <fullName>Competitor pricing feedback</fullName>
            </value>
            <value>
                <fullName>Other (please explain)</fullName>
            </value>
            <value>
                <fullName>Customer Request product information</fullName>
            </value>
            <value>
                <fullName>Error when placing order</fullName>
            </value>
            <value>
                <fullName>Item missing information</fullName>
            </value>
            <value>
                <fullName>Missing required parts for installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>