force-app/main/default/objects/Case/fields/Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Reason_Other__c</fullName>
    <description>Allows case owners to enter &quot;other&quot; case reasons</description>
    <inlineHelpText>Please enter an explanation if the Reason is &quot;Other&quot;</inlineHelpText>
    <label>Reason - Other</label>
    <type>TextArea</type>
</CustomField>