force-app/main/default/objects/Case/fields/Recourse_Comments__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Comments__c</fullName>
    <label>Recourse Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>