force-app/main/default/objects/Case/fields/Recourse_Response__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Response__c</fullName>
    <label>Recourse Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Counter Offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>