force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial One</fullName>
            </value>
            <value>
                <fullName>Commercial Pro</fullName>
            </value>
            <value>
                <fullName>Supplemental Contract</fullName>
            </value>
            <value>
                <fullName>Create New Account</fullName>
            </value>
            <value>
                <fullName>Credit Line Increase</fullName>
            </value>
            <value>
                <fullName>Service Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>