force-app/main/default/objects/Case/fields/Requested_Features__c.field-meta.xml
<CustomField>
    <fullName>Requested_Features__c</fullName>
    <label>Requested Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>