force-app/main/default/objects/Case/fields/Requested_Price_Point__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price_Point__c</fullName>
    <label>Requested Price Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>