force-app/main/default/objects/Case/fields/Requester_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requester_s_Manager__c</fullName>
    <label>Requester&#39;s Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>