force-app/main/default/objects/Case/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <label>Requestor Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>