force-app/main/default/objects/Case/fields/Requestor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Phone__c</fullName>
    <label>Requestor Phone</label>
    <type>Phone</type>
</CustomField>