force-app/main/default/objects/Case/fields/Requestor_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requestor_s_Manager__c</fullName>
    <label>Requestor&#39;s Manager</label>
    <length>18</length>
    <type>Text</type>
</CustomField>