force-app/main/default/objects/Case/fields/Requsted_Funding__c.field-meta.xml
<CustomField>
    <fullName>Requsted_Funding__c</fullName>
    <label>Requsted Funding</label>
    <length>18</length>
    <type>Text</type>
</CustomField>