force-app/main/default/objects/Case/fields/Response_Received_from_Blue_Tarp__c.field-meta.xml
<CustomField>
    <fullName>Response_Received_from_Blue_Tarp__c</fullName>
    <label>Response Received from Blue Tarp</label>
    <type>DateTime</type>
</CustomField>