force-app/main/default/objects/Case/fields/Response_Recieved_from_Citi__c.field-meta.xml
<CustomField>
    <fullName>Response_Recieved_from_Citi__c</fullName>
    <label>Response Recieved from Citi</label>
    <type>DateTime</type>
</CustomField>