force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>CSI Team root cause of issue</description>
    <inlineHelpText>CSI Team to utilize showing the root case of the issue or case request</inlineHelpText>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>48 hour block on due</fullName>
            </value>
            <value>
                <fullName>Sales team checking availability</fullName>
            </value>
            <value>
                <fullName>Sales team checking status of order</fullName>
            </value>
            <value>
                <fullName>Sales team order entry process</fullName>
            </value>
            <value>
                <fullName>Backorder</fullName>
            </value>
            <value>
                <fullName>CCN process issues</fullName>
            </value>
            <value>
                <fullName>Common carrier delivery issues</fullName>
            </value>
            <value>
                <fullName>Day added to item travel time</fullName>
            </value>
            <value>
                <fullName>DDC truck full to MDO</fullName>
            </value>
            <value>
                <fullName>DOS system issues</fullName>
            </value>
            <value>
                <fullName>DOS system shows product available but no freight lane capacity</fullName>
            </value>
            <value>
                <fullName>Freight lane capacity MDO</fullName>
            </value>
            <value>
                <fullName>Freight lane capacity Hybrid</fullName>
            </value>
            <value>
                <fullName>Hybrid delivery date issue</fullName>
            </value>
            <value>
                <fullName>Hybrid order process</fullName>
            </value>
            <value>
                <fullName>Item damaged</fullName>
            </value>
            <value>
                <fullName>Item set up</fullName>
            </value>
            <value>
                <fullName>Item not at MDO from the DDC</fullName>
            </value>
            <value>
                <fullName>Late due in</fullName>
            </value>
            <value>
                <fullName>MDO received item late</fullName>
            </value>
            <value>
                <fullName>MDO/SDO delivery to customer issue</fullName>
            </value>
            <value>
                <fullName>Move up date from vendor</fullName>
            </value>
            <value>
                <fullName>No available stock/no due in’s</fullName>
            </value>
            <value>
                <fullName>No DOS connection</fullName>
            </value>
            <value>
                <fullName>Not enough stock avail</fullName>
            </value>
            <value>
                <fullName>Not enough stock on order</fullName>
            </value>
            <value>
                <fullName>OMC checking availability</fullName>
            </value>
            <value>
                <fullName>OMC checking status of order</fullName>
            </value>
            <value>
                <fullName>OMC order entry process</fullName>
            </value>
            <value>
                <fullName>RMA orders needing same day expedite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>