force-app/main/default/objects/Case/fields/salescheck__c.field-meta.xml
<CustomField>
    <fullName>salescheck__c</fullName>
    <label>Sales Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>