force-app/main/default/objects/Case/fields/SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order__c</fullName>
    <label>SAP Order #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>