force-app/main/default/objects/Case/fields/SCOPES_ID__c.field-meta.xml
<CustomField>
    <fullName>SCOPES_ID__c</fullName>
    <formula>Account.SCOPES_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SCOPES ID</label>
    <type>Text</type>
</CustomField>