force-app/main/default/objects/Case/fields/Sent_to_Blue_Tarp__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Blue_Tarp__c</fullName>
    <label>Sent to Blue Tarp</label>
    <type>DateTime</type>
</CustomField>