force-app/main/default/objects/Case/fields/Sent_to_Blue_Tarp_Age__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Blue_Tarp_Age__c</fullName>
    <formula>(NOW()- Sent_to_Blue_Tarp__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent to Blue Tarp Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>