force-app/main/default/objects/Case/fields/Sent_to_Recourse__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Recourse__c</fullName>
    <label>Sent to Recourse</label>
    <type>DateTime</type>
</CustomField>