force-app/main/default/objects/Case/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <formula>Not(ISBLANK(Service_Date__c ))</formula>
    <label>Service Case?</label>
    <type>Checkbox</type>
</CustomField>