force-app/main/default/objects/Case/fields/Show_Deal__c.field-meta.xml
<CustomField>
    <fullName>Show_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Deal</label>
    <type>Checkbox</type>
</CustomField>