force-app/main/default/objects/Case/fields/Show_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Start_Date__c</fullName>
    <label>Show Start Date</label>
    <type>Date</type>
</CustomField>