force-app/main/default/objects/Case/fields/SLS_Unit__c.field-meta.xml
<CustomField>
    <fullName>SLS_Unit__c</fullName>
    <inlineHelpText>If Freight Lane issue is the root cause then the CSI Team will indicate which SLS # is involved.</inlineHelpText>
    <label>SLS Unit #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>