force-app/main/default/objects/Case/fields/Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsorship</label>
    <type>Checkbox</type>
</CustomField>