force-app/main/default/objects/Case/fields/Status_Update_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Status_Update_Confirmation__c</fullName>
    <label>Status Update / Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPSEL</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Credit Solutions</fullName>
            </value>
            <value>
                <fullName>Del / Inst Team</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Product Resolution</fullName>
            </value>
            <value>
                <fullName>Standard OM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>