force-app/main/default/objects/Case/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Customer Landing Page</fullName>
            </value>
            <value>
                <fullName>Digital Catalog</fullName>
            </value>
            <value>
                <fullName>Email/ Keywords</fullName>
            </value>
            <value>
                <fullName>Exhibit</fullName>
            </value>
            <value>
                <fullName>Flyer/ Brochure</fullName>
            </value>
            <value>
                <fullName>Membership Dues</fullName>
            </value>
            <value>
                <fullName>Microsite</fullName>
            </value>
            <value>
                <fullName>Post Cards</fullName>
            </value>
            <value>
                <fullName>Presentation Support</fullName>
            </value>
            <value>
                <fullName>Product Images</fullName>
            </value>
            <value>
                <fullName>Program Advertisement</fullName>
            </value>
            <value>
                <fullName>Qualified Leads</fullName>
            </value>
            <value>
                <fullName>RFPs</fullName>
            </value>
            <value>
                <fullName>Show Special</fullName>
            </value>
            <value>
                <fullName>Sponssorship</fullName>
            </value>
            <value>
                <fullName>MarcomCentral</fullName>
            </value>
            <value>
                <fullName>Salesforce.com</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>Mainframe</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Boilerplate Information</fullName>
            </value>
            <value>
                <fullName>Non-boilerplate Information</fullName>
            </value>
            <value>
                <fullName>Copyrighting</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Trade Show Assets - Brochures</fullName>
            </value>
            <value>
                <fullName>Marketing Assets</fullName>
            </value>
            <value>
                <fullName>Business Cards</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>