force-app/main/default/objects/Case/fields/Suggested_Item_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Item_Selling_Price__c</fullName>
    <description>Amount should be equal to either the amount of revenue expected to be generated in the coming 12 months or the total amount of the project, whichever is less.</description>
    <inlineHelpText>Amount should be equal to either the amount of revenue expected to be generated in the coming 12 months or the total amount of the project, whichever is less.</inlineHelpText>
    <label>Suggested Item Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>