force-app/main/default/objects/Case/fields/Supplemental_Application__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supplemental Application</label>
    <type>Checkbox</type>
</CustomField>