force-app/main/default/objects/Case/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <description>Used for Business System Support to ID system</description>
    <label>System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>