force-app/main/default/objects/Case/fields/Take_Case__c.field-meta.xml
<CustomField>
    <fullName>Take_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Take Case</label>
    <type>Checkbox</type>
</CustomField>