force-app/main/default/objects/Case/fields/Time_for_Citi_s_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_for_Citi_s_Response__c</fullName>
    <formula>Response_Recieved_from_Citi__c - Sent_to_Citi__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time for Citi&#39;s Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>