force-app/main/default/objects/Case/fields/Time_for_Recourse_Response__c.field-meta.xml
<CustomField>
    <fullName>Time_for_Recourse_Response__c</fullName>
    <formula>Response_Received_from_Recourse__c - Sent_to_Recourse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time for Recourse Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>