force-app/main/default/objects/Case/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <description>Email address the case was sent to</description>
    <label>ToAddress</label>
    <type>Email</type>
</CustomField>