force-app/main/default/objects/Case/fields/Type_of_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Inquiry__c</fullName>
    <label>Type of Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Prospective Customer</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>