force-app/main/default/objects/Case/fields/Type_of_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Opportunity__c</fullName>
    <inlineHelpText>Determine if this is a one time purchase or ongoing opportunity</inlineHelpText>
    <label>Type of Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spot Buy</fullName>
            </value>
            <value>
                <fullName>Annual Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>