force-app/main/default/objects/Case/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>120 Day Past Due Notice</fullName>
            </value>
            <value>
                <fullName>150 Day Past Due Notice</fullName>
            </value>
            <value>
                <fullName>180 Day Past Due Notice</fullName>
            </value>
            <value>
                <fullName>1st Request - Initial</fullName>
            </value>
            <value>
                <fullName>2nd Follow Up</fullName>
            </value>
            <value>
                <fullName>30 Day Past Due Notice</fullName>
            </value>
            <value>
                <fullName>3rd Follow up</fullName>
            </value>
            <value>
                <fullName>Other 3rd Party</fullName>
                <label>3rd Party Chargeback</label>
            </value>
            <value>
                <fullName>3rd Party Lender</fullName>
            </value>
            <value>
                <fullName>3rd Party Manufacture/ Non KD Purchase</fullName>
            </value>
            <value>
                <fullName>60 Day Past Due Notice</fullName>
            </value>
            <value>
                <fullName>90 Day Past Due Notice</fullName>
            </value>
            <value>
                <fullName>Account Assignment</fullName>
            </value>
            <value>
                <fullName>Account Current</fullName>
            </value>
            <value>
                <fullName>Account Hold Notice</fullName>
            </value>
            <value>
                <fullName>Accounting Services</fullName>
            </value>
            <value>
                <fullName>Account Reconciliation Request</fullName>
            </value>
            <value>
                <fullName>Account Updates</fullName>
            </value>
            <value>
                <fullName>Application Inquiry</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>BOL Request / Not in Descartes</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>CME Request</fullName>
            </value>
            <value>
                <fullName>COI</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Common Carrier Damaged</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
                <label>Comm One - Citi</label>
            </value>
            <value>
                <fullName>Bluetarp</fullName>
                <label>Comm Pro – BT</label>
            </value>
            <value>
                <fullName>Contact Customer</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>