force-app/main/default/objects/Case/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <description>The 5 to 8 character ID you use to log into the requested application</description>
    <inlineHelpText>The 5 to 8 character ID you use to log into the requested application</inlineHelpText>
    <label>User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>