force-app/main/default/objects/Case/fields/warehouse_no__c.field-meta.xml
<CustomField>
    <fullName>warehouse_no__c</fullName>
    <label>Warehouse #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>