force-app/main/default/objects/Case/recordTypes/Chargeback.recordType-meta.xml
<RecordType>
    <fullName>Chargeback</fullName>
    <active>true</active>
    <businessProcess>Credit</businessProcess>
    <description>Chargeback Record Type</description>
    <label>Chargeback</label>
</RecordType>