force-app/main/default/objects/Case/recordTypes/Closed_Intake_Case.recordType-meta.xml
<RecordType>
    <fullName>Closed_Intake_Case</fullName>
    <active>true</active>
    <businessProcess>Orders</businessProcess>
    <label>Closed Intake Case</label>
</RecordType>