force-app/main/default/objects/Case/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <businessProcess>Credit</businessProcess>
    <description>Credit Case Types</description>
    <label>Credit Processing</label>
</RecordType>