force-app/main/default/objects/Case/recordTypes/Credit_Account_Management.recordType-meta.xml
<RecordType>
    <fullName>Credit_Account_Management</fullName>
    <active>true</active>
    <businessProcess>Credit</businessProcess>
    <label>Credit Account Management</label>
</RecordType>